feat: debug codepush config, add animation

--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -25,16 +25,17 @@
     "icon:force": "node scripts/icon-generator.js --force"
   },
   "dependencies": {
+    "@bravemobile/react-native-code-push": "^11.0.0",
     "@gorhom/bottom-sheet": "^5.1.8",
     "@onflow/fcl": "^1.19.0",
-    "@onflow/frw-context": "workspace:*",
     "@onflow/frw-api": "workspace:*",
     "@onflow/frw-cadence": "workspace:*",
+    "@onflow/frw-context": "workspace:*",
     "@onflow/frw-services": "workspace:*",
     "@onflow/frw-stores": "workspace:*",
+    "@onflow/frw-types": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
     "@onflow/frw-workflow": "workspace:*",
-    "@onflow/frw-types": "workspace:*",
     "@onflow/transport-http": "^1.13.0",
     "@onflow/types": "^1.4.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -55,6 +56,7 @@
     "i18next": "^25.3.2",
     "immer": "^10.1.1",
     "instabug-reactnative": "^15.0.1",
+    "lottie-react-native": "^7.3.1",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-freeze": "^1.0.4",
