--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -91,9 +91,9 @@
     "qr-code-styling": "^1.9.2",
     "qr-scanner": "^1.4.2",
     "raw-loader": "^4.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native-web": "^0.19.12",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native-web": "^0.21.0",
     "react-highlight": "^0.15.0",
     "react-hook-form": "^7.60.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -130,8 +130,8 @@
     "@types/koa-compose": "^3.2.8",
     "@types/lodash": "^4.17.20",
     "@types/node": "^22.16.2",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
