--- a/packages/stores/package.json
+++ b/packages/stores/package.json
@@ -42,7 +42,8 @@
   },
   "devDependencies": {
     "tsup": "^8.3.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vitest": "^3.2.4"
   },
   "publishConfig": {
     "access": "public"
