--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -35,6 +35,7 @@
     "@onflow/frw-api": "workspace:*"
   },
   "devDependencies": {
-    "tsup": "^8.5.0"
+    "tsup": "^8.5.0",
+    "vitest": "^3.2.4"
   }
 }
