--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -43,6 +43,7 @@
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.0.12",
     "@react-navigation/native-stack": "^7.1.13",
+    "@revopush/react-native-code-push": "^1.2.0",
     "@rn-primitives/avatar": "^1.2.0",
     "@rn-primitives/checkbox": "^1.2.0",
     "@rn-primitives/tabs": "^1.2.0",
@@ -53,8 +54,8 @@
     "ethers": "^6.15.0",
     "i18next": "^25.3.2",
     "immer": "^10.1.1",
-    "lottie-react-native": "^7.3.1",
     "instabug-reactnative": "^15.0.1",
+    "lottie-react-native": "^7.3.1",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-i18next": "^15.6.1",
@@ -83,6 +84,7 @@
     "@react-native/babel-preset": "0.80.1",
     "@react-native/codegen": "0.80.1",
     "@react-native/eslint-config": "0.80.1",
+    "@react-native/metro-babel-transformer": "^0.80.2",
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
     "@types/react": "^19.1.0",
