--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "dotenv": "^16.4.5",
     "tsup": "^8.5.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@onflow/types": "1.0.3"
   }
 }
