--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,6 +15,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@onflow/frw-icons": "workspace:*",
     "@tamagui/animations-react-native": "^1.132.16",
     "@tamagui/config": "^1.132.16",
     "@tamagui/core": "^1.132.16",
