--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -39,6 +39,7 @@
   "author": "Flow Reference Wallet Team",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^22.11.0",
     "@svgr/cli": "^8.1.0",
     "eslint": "^9.17.0",
     "tsup": "^8.3.5",
