fix: unable to import issue and rename screen package

--- a/packages/screens/package.json
+++ b/packages/screens/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@onflow/frw-screen",
+  "name": "@onflow/frw-screens",
   "version": "1.0.0",
   "description": "Screen components and logic for Flow Wallet",
   "main": "dist/index.js",
