--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "@onflow/frw-cadence": ["./packages/cadence/src"],
       "@onflow/frw-context": ["./packages/context/src"],
       "@onflow/frw-icons": ["./packages/icons/src"],
-      "@onflow/frw-screens": ["packages/screens/src"],
+      "@onflow/frw-screens": ["./packages/screens/src"],
       "@onflow/frw-services": ["./packages/services/src"],
       "@onflow/frw-stores": ["./packages/stores/src"],
       "@onflow/frw-types": ["./packages/types/src"],
@@ -32,7 +32,7 @@
     { "path": "./packages/cadence" },
     { "path": "./packages/context" },
     { "path": "./packages/icons" },
-    { "path": "./packages/screen" },
+    { "path": "./packages/screens" },
     { "path": "./packages/services" },
     { "path": "./packages/stores" },
     { "path": "./packages/ui" },
