--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -50,6 +50,13 @@
     "@noble/secp256k1": "^1.7.2",
     "@onflow/fcl": "^1.19.0",
     "@onflow/frw-cadence": "workspace:*",
+    "@onflow/frw-ui": "workspace:*",
+    "@tamagui/animations-react-native": "^1.132.16",
+    "@tamagui/config": "^1.132.16",
+    "@tamagui/core": "^1.132.16",
+    "@tamagui/theme-builder": "^1.132.17",
+    "@tamagui/web": "^1.132.16",
+    "tamagui": "^1.132.16",
     "@reown/walletkit": "^1.2.8",
     "@trustwallet/wallet-core": "^4.3.6",
     "@tsparticles/engine": "^3.8.1",
@@ -89,8 +96,8 @@
     "qr-code-styling": "^1.9.2",
     "qr-scanner": "^1.4.2",
     "raw-loader": "^4.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-highlight": "^0.15.0",
     "react-hook-form": "^7.60.0",
     "react-infinite-scroll-component": "^6.1.0",
@@ -127,8 +134,8 @@
     "@types/koa-compose": "^3.2.8",
     "@types/lodash": "^4.17.20",
     "@types/node": "^22.16.2",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
