--- a/packages/cadence/package.json
+++ b/packages/cadence/package.json
@@ -21,7 +21,9 @@
     "test:coverage": "vitest --coverage",
     "prepublishOnly": "pnpm build",
     "lint": "eslint . --cache",
-    "lint:fix": "eslint . --cache --fix"
+    "lint:fix": "eslint . --cache --fix",
+    "codegen": "npx cadence-codegen typescript ./src/cadence ./src/cadence.generated.ts",
+    "postinstall": "pnpm codegen"
   },
   "exports": {
     ".": {
@@ -44,6 +46,7 @@
   "devDependencies": {
     "@types/node": "^22.11.0",
     "@vitest/coverage-v8": "3.2.4",
+    "@outblock/cadence-codegen": "^0.0.9",
     "tsup": "^8.3.5",
     "typescript": "^5.7.2",
     "vitest": "^3.2.4"
