--- a/packages/screens/package.json
+++ b/packages/screens/package.json
@@ -17,6 +17,7 @@
     "@onflow/frw-stores": "workspace:*",
     "@onflow/frw-types": "workspace:*",
     "@onflow/frw-ui": "workspace:*",
+    "@onflow/frw-utils": "workspace:*",
     "react": "^19.1.0",
     "react-i18next": "^15.6.1"
   },
