--- a/.github/workflows/packages.yml
+++ b/.github/workflows/packages.yml
@@ -55,6 +55,7 @@ jobs:
           TEST_MAIN_ACCOUNT_COA: ${{ vars.TEST_MAIN_ACCOUNT_COA }}
           TEST_CHILD_ACCOUNT_ONE_ADDR: ${{ vars.TEST_CHILD_ACCOUNT_ONE_ADDR }}
           TEST_CHILD_ACCOUNT_TWO_ADDR: ${{ vars.TEST_CHILD_ACCOUNT_TWO_ADDR }}
+          TEST_MAIN_ACCOUNT_KEY_INDEX: ${{ vars.TEST_MAIN_ACCOUNT_KEY_INDEX }}
 
       - name: Type check packages
         run: pnpm -r --filter='./packages/*' typecheck
