--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -43,9 +43,10 @@
     "sha3": "^2.1.4"
   },
   "devDependencies": {
+    "@onflow/types": "1.0.3",
+    "add": "^2.0.6",
     "dotenv": "^16.4.5",
     "tsup": "^8.5.0",
-    "vitest": "^3.2.4",
-    "@onflow/types": "1.0.3"
+    "vitest": "^3.2.4"
   }
 }
