--- a/apps/react-native/tsconfig.json
+++ b/apps/react-native/tsconfig.json
@@ -13,6 +13,7 @@
       "@onflow/frw-api": ["../../packages/api/src"],
       "@onflow/frw-cadence": ["../../packages/cadence/src"],
       "@onflow/frw-context": ["../../packages/context/src"],
+      "@onflow/frw-icons": ["../../packages/icons/src/native.ts"],
       "@onflow/frw-services": ["../../packages/services/src"],
       "@onflow/frw-stores": ["../../packages/stores/src"],
       "@onflow/frw-types": ["../../packages/types/src"],
@@ -20,31 +21,5 @@
       "@onflow/frw-workflow": ["../../packages/workflow/src"]
     }
   },
-  "include": ["src/**/*", "nativewind-env.d.ts"],
-  "references": [
-    {
-      "path": "../../packages/types"
-    },
-    {
-      "path": "../../packages/utils"
-    },
-    {
-      "path": "../../packages/api"
-    },
-    {
-      "path": "../../packages/cadence"
-    },
-    {
-      "path": "../../packages/context"
-    },
-    {
-      "path": "../../packages/services"
-    },
-    {
-      "path": "../../packages/stores"
-    },
-    {
-      "path": "../../packages/workflow"
-    }
-  ]
+  "include": ["src/**/*", "nativewind-env.d.ts"]
 }
