--- a/packages/screens/package.json
+++ b/packages/screens/package.json
@@ -19,7 +19,8 @@
     "@onflow/frw-ui": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
     "react": "^19.1.0",
-    "react-i18next": "^15.6.1"
+    "react-i18next": "^15.6.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/react": "^19.1.0",
