--- a/apps/extension/package.json
+++ b/apps/extension/package.json
@@ -53,6 +53,8 @@
     "@onflow/frw-screens": "workspace:*",
     "@onflow/frw-types": "workspace:*",
     "@onflow/frw-ui": "workspace:*",
+    "@onflow/frw-icons": "workspace:*",
+    "@reown/walletkit": "^1.2.8",
     "@tamagui/animations-react-native": "^1.132.16",
     "@tamagui/config": "^1.132.16",
     "@tamagui/core": "^1.132.16",
@@ -104,6 +106,7 @@
     "react-highlight": "^0.15.0",
     "react-hook-form": "^7.60.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-native-web": "^0.21.0",
     "react-qrcode-logo": "^3.0.0",
     "react-router": "^7.6.3",
     "recharts": "^2.15.4",
