--- a/.github/workflows/extension-build.yml
+++ b/.github/workflows/extension-build.yml
@@ -225,39 +225,66 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
-      - name: Install Playwright Browsers
-        run: pnpm -F frw-extension exec playwright install --with-deps chromium
-
-      - name: Setup Chrome for CI
+      - name: Setup Chrome for extension testing
         run: |
-          # Install additional dependencies for Chrome in headless mode
+          # Install Google Chrome (not just Chromium)
+          wget -q -O - https://dl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+          echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee /etc/apt/sources.list.d/google-chrome.list
+
           sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
+
+          # Install additional dependencies
           sudo apt-get install -y \
             libnss3-dev \
             libatk-bridge2.0-dev \
             libdrm2 \
             libgtk-3-dev \
             libgbm-dev \
-            libasound2-dev
+            libasound2-dev \
+            xvfb
 
-          # Create chrome policies directory to allow extension loading
+          # Verify Chrome installation
+          google-chrome --version
+          which google-chrome
+
+          # Create chrome policies directory for both possible locations
           sudo mkdir -p /etc/opt/chrome/policies/managed
-          sudo tee /etc/opt/chrome/policies/managed/test_policy.json > /dev/null <<EOF
+          sudo mkdir -p /etc/chromium/policies/managed
+          sudo mkdir -p /etc/opt/chromium/policies/managed
+
+          # Create extension allowlist policy
+          sudo tee /etc/opt/chrome/policies/managed/extension_policy.json > /dev/null <<EOF
           {
             "ExtensionInstallForcelist": [],
             "ExtensionInstallWhitelist": ["*"],
+            "ExtensionInstallAllowlist": ["*"],
             "DeveloperToolsAvailability": 1,
-            "ExtensionAllowedTypes": ["extension", "packaged_app"],
+            "ExtensionAllowedTypes": ["extension", "packaged_app", "hosted_app"],
             "ExtensionSettings": {
               "*": {
-                "allowed_types": ["extension"],
-                "blocked_install_message": "Custom extension blocked.",
-                "install_sources": ["*"],
-                "installation_mode": "allowed"
+                "installation_mode": "allowed",
+                "allowed_types": ["extension", "packaged_app"],
+                "install_sources": ["*"]
               }
-            }
+            },
+            "DefaultSearchProviderEnabled": false,
+            "PasswordManagerEnabled": false,
+            "AutofillAddressEnabled": false,
+            "AutofillCreditCardEnabled": false,
+            "MetricsReportingEnabled": false,
+            "SafeBrowsingProtectionLevel": 0,
+            "SpellcheckEnabled": false,
+            "TranslateEnabled": false
           }
           EOF
+
+          # Copy policy to all possible locations
+          sudo cp /etc/opt/chrome/policies/managed/extension_policy.json /etc/chromium/policies/managed/ 2>/dev/null || true
+          sudo cp /etc/opt/chrome/policies/managed/extension_policy.json /etc/opt/chromium/policies/managed/ 2>/dev/null || true
+
+      - name: Install Playwright (without browsers)
+        run: pnpm -F frw-extension exec playwright install-deps
 
       - name: Verify extension build
         run: |
