feat: update rn package.json

--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -17,26 +17,18 @@
     "pod": "npx -y pod-install",
     "codegen": "react-native codegen",
     "codegen:bridge": "node scripts/bridge-codegen.js",
-    "postinstall": "pnpm run codegen:bridge && pnpm run icon",
+    "postinstall": "pnpm run codegen:bridge",
     "bundle:ios": "react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/main.jsbundle --assets-dest ios",
     "bundle:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
-    "bundle:android:sourcemap": "react-native bundle --platform android --entry-file index.js --dev false --bundle-output android/app/src/main/assets/index.android.bundle --sourcemap-output ./android-sourcemap.json",
-    "icon": "node scripts/icon-generator.js",
-    "icon:force": "node scripts/icon-generator.js --force"
+    "bundle:android:sourcemap": "react-native bundle --platform android --entry-file index.js --dev false --bundle-output android/app/src/main/assets/index.android.bundle --sourcemap-output ./android-sourcemap.json"
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.1.8",
-    "@onflow/fcl": "^1.19.0",
-    "@onflow/frw-api": "workspace:*",
-    "@onflow/frw-cadence": "workspace:*",
     "@onflow/frw-context": "workspace:*",
-    "@onflow/frw-services": "workspace:*",
+    "@onflow/frw-screens": "workspace:^",
     "@onflow/frw-stores": "workspace:*",
     "@onflow/frw-types": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
-    "@onflow/frw-workflow": "workspace:*",
-    "@onflow/transport-http": "^1.13.0",
-    "@onflow/types": "^1.4.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/slider": "^4.5.7",
     "@react-native/gradle-plugin": "^0.80.1",
@@ -44,19 +36,12 @@
     "@react-navigation/native": "^7.0.12",
     "@react-navigation/native-stack": "^7.1.13",
     "@revopush/react-native-code-push": "^1.2.0",
-    "@rn-primitives/avatar": "^1.2.0",
-    "@rn-primitives/checkbox": "^1.2.0",
-    "@rn-primitives/tabs": "^1.2.0",
-    "axios": "^1.10.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "ethers": "^6.15.0",
-    "i18next": "^25.3.2",
     "immer": "^10.1.1",
     "instabug-reactnative": "^15.0.1",
     "lottie-react-native": "^7.3.1",
-    "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-i18next": "^15.6.1",
     "react-native": "0.80.1",
@@ -68,15 +53,13 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-svg": "^15.12.0",
-    "react-native-worklets": "^0.4.1",
-    "tailwind-merge": "^3.3.1",
-    "zustand": "^5.0.6"
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.28.2",
+    "@babel/runtime": "^7.28.3",
     "@eslint/js": "^9.31.0",
     "@react-native-community/cli": "19.0.0",
     "@react-native-community/cli-platform-android": "19.0.0",
@@ -99,9 +82,6 @@
     "imageoptim-cli": "^3.1.9",
     "lint-staged": "^15.2.10",
     "prettier": "2.8.8",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "swagger-axios-codegen": "^0.17.4",
-    "tailwindcss": "^3.4.1",
     "typescript": "5.0.4",
     "typescript-eslint": "^8.37.0"
   },
