--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -23,37 +23,27 @@
     "bundle:android:sourcemap": "react-native bundle --platform android --entry-file index.js --dev false --bundle-output android/app/src/main/assets/index.android.bundle --sourcemap-output ./android-sourcemap.json"
   },
   "dependencies": {
-    "@gorhom/bottom-sheet": "^5.1.8",
     "@onflow/frw-context": "workspace:*",
     "@onflow/frw-screens": "workspace:^",
     "@onflow/frw-stores": "workspace:*",
     "@onflow/frw-types": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
-    "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/slider": "^4.5.7",
     "@react-native/gradle-plugin": "^0.80.1",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.0.12",
     "@react-navigation/native-stack": "^7.1.13",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@revopush/react-native-code-push": "^1.2.0",
     "buffer": "^6.0.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "instabug-reactnative": "^15.0.1",
-    "lottie-react-native": "^7.3.1",
     "react": "19.1.0",
     "react-i18next": "^15.6.1",
     "react-native": "0.80.1",
-    "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^3.3.0",
-    "react-native-reanimated": "4.0.1",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.11.1",
-    "react-native-svg": "^15.12.0",
-    "react-native-worklets": "^0.4.1"
+    "react-native-safe-area-context": "5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
