--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -28,6 +28,7 @@
     "@storybook/addon-docs": "^9.1.1",
     "@storybook/addon-links": "^9.1.1",
     "@storybook/react-vite": "^9.1.1",
+    "@onflow/frw-icons": "workspace:*",
     "@types/node": "^22.11.0",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.0",
