--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -29,22 +29,29 @@
     "@onflow/frw-types": "workspace:*",
     "@onflow/frw-ui": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
-    "@react-native/gradle-plugin": "^0.80.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/gradle-plugin": "^0.79.2",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.0.12",
     "@react-navigation/native-stack": "^7.1.13",
-    "@react-native-async-storage/async-storage": "^2.2.0",
     "@revopush/react-native-code-push": "^1.2.0",
+    "@tamagui/config": "^1.132.20",
     "buffer": "^6.0.3",
     "immer": "^10.1.1",
     "instabug-reactnative": "^15.0.1",
-    "react": "19.1.0",
+    "lottie-react-native": "^7.3.2",
+    "react": "19.0.0",
     "react-i18next": "^15.6.1",
-    "react-native": "0.80.1",
+    "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^3.3.0",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-reanimated": "^4.0.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "^4.14.1",
+    "react-native-svg": "^15.12.1",
+    "react-native-worklets": "^0.4.1",
+    "tamagui": "^1.132.20"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -55,12 +62,12 @@
     "@react-native-community/cli": "19.0.0",
     "@react-native-community/cli-platform-android": "19.0.0",
     "@react-native-community/cli-platform-ios": "19.0.0",
-    "@react-native/babel-preset": "0.80.1",
-    "@react-native/codegen": "0.80.1",
-    "@react-native/eslint-config": "0.80.1",
-    "@react-native/metro-babel-transformer": "^0.80.2",
-    "@react-native/metro-config": "0.80.1",
-    "@react-native/typescript-config": "0.80.1",
+    "@react-native/babel-preset": "0.79.2",
+    "@react-native/codegen": "0.79.2",
+    "@react-native/eslint-config": "0.79.2",
+    "@react-native/metro-babel-transformer": "^0.79.2",
+    "@react-native/metro-config": "0.79.2",
+    "@react-native/typescript-config": "0.79.2",
     "@types/react": "^19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
