--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,7 +22,8 @@
     "@tamagui/core": "^1.132.20",
     "@tamagui/theme-builder": "^1.132.20",
     "@tamagui/web": "^1.132.20",
-    "react-native-web": "^0.21.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
     "tamagui": "^1.132.20"
   },
   "devDependencies": {
@@ -35,8 +36,9 @@
     "@types/react-dom": "^19.1.0",
     "eslint": "^9.31.0",
     "eslint-plugin-storybook": "9.1.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.21.0",
     "rimraf": "^5.0.1",
     "storybook": "^9.1.1",
     "tsup": "^8.0.0",
@@ -45,8 +47,9 @@
     "vitest": "^1.0.0"
   },
   "peerDependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-native": ">=0.72 <1"
   },
   "files": [
     "dist"
