--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -40,9 +40,9 @@
     "immer": "^10.1.1",
     "instabug-reactnative": "^15.0.1",
     "lottie-react-native": "^7.3.2",
-    "react": "19.0.0",
+    "react": "workspace:*",
     "react-i18next": "^15.6.1",
-    "react-native": "0.79.2",
+    "react-native": "workspace:*",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^3.3.0",
