--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "prepare": "husky",
     "commitlint": "commitlint --from HEAD~1 --to HEAD --verbose"
   },
+  "dependencies": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "@tamagui/animations-react-native": "^1.132.20"
+  },
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
@@ -86,6 +92,13 @@
           "react-native": "0.79.2"
         }
       }
+    },
+    "hoistingLimits": "workspaces",
+    "dedupe-peer-dependents": true,
+    "updateConfig": {
+      "ignoreDependencies": [
+        "react-native"
+      ]
     }
   },
   "resolutions": {
