--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -17,13 +17,10 @@
   },
   "dependencies": {
     "@onflow/frw-icons": "workspace:*",
-    "@tamagui/animations-react-native": "^1.132.20",
     "@tamagui/config": "^1.132.20",
     "@tamagui/core": "^1.132.20",
     "@tamagui/theme-builder": "^1.132.20",
     "@tamagui/web": "^1.132.20",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
     "tamagui": "^1.132.20"
   },
   "devDependencies": {
@@ -48,8 +45,15 @@
   },
   "peerDependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-native": ">=0.72 <1"
+    "react-dom": "^19.0.0"
+  },
+  "peerDependenciesMeta": {
+    "react-native": {
+      "optional": true
+    },
+    "@tamagui/animations-react-native": {
+      "optional": true
+    }
   },
   "files": [
     "dist"
