--- a/packages/screens/package.json
+++ b/packages/screens/package.json
@@ -25,8 +25,7 @@
     "@onflow/frw-utils": "workspace:*",
     "i18next": "^24.1.0",
     "react": "^19.1.0",
-    "react-i18next": "^15.6.1",
-    "zustand": "^5.0.6"
+    "react-i18next": "^15.6.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.0",
