--- a/apps/extension/tsconfig.json
+++ b/apps/extension/tsconfig.json
@@ -19,8 +19,7 @@
       "@onflow/frw-cadence": ["./node_modules/@onflow/frw-cadence/src/index.ts"],
       "@onflow/frw-context": ["./node_modules/@onflow/frw-context/src/index.ts"],
       "@onflow/frw-ui": ["./node_modules/@onflow/frw-ui/src/index.ts"],
-      "@onflow/frw-screens": ["./node_modules/@onflow/frw-screens/src/index.ts"],
-      "@onflow/frw-icons": ["./node_modules/@onflow/frw-icons/src/index.ts"]
+      "@onflow/frw-screens": ["./node_modules/@onflow/frw-screens/src/index.ts"]
     },
     "lib": ["ES2021.String", "DOM", "DOM.Iterable"],
     "types": ["chrome", "node", "react", "react-dom"],
