--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,3 @@
 strict-peer-dependencies=false
 auto-install-peers=false
-shamefully-hoist=true
-node-linker=hoisted
+prefer-workspace-packages=true
