--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -65,7 +65,7 @@
     "react-native-gesture-handler": "^2.27.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^2.12.2",
-    "react-native-modal": "14.0.0-rc.1",
+    "react-native-modal": "13.0.1",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.11.1",
