--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -91,7 +91,7 @@
     "type": "modules",
     "jsSrcsDir": "src/bridge",
     "android": {
-      "javaPackageName": "com.flowfoundation.wallet.bridge"
+      "javaPackageName": "com.flowfoundation.wallet.reactnative.bridge"
     },
     "ios": {
       "modulesProvider": {
