--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ Thumbs.db
 apps/react-native/ios/
 apps/react-native/android/
 apps/react-native/flow-wallet-kit/
+Flow-Wallet-Kit/
 
 # React Native build outputs that might leak outside submodules
 **/ios/build/
