--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -29,6 +29,7 @@
     "@onflow/frw-types": "workspace:*",
     "@onflow/frw-ui": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
+    "@tanstack/react-query": "^5.85.6",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/gradle-plugin": "^0.79.2",
     "@react-navigation/elements": "^2.5.2",
