--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -29,13 +29,12 @@
     "@onflow/frw-types": "workspace:*",
     "@onflow/frw-ui": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
-    "@tanstack/react-query": "^5.85.6",
+    "@outblock/react-native-code-push": "^1.2.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/gradle-plugin": "^0.79.2",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.0.12",
     "@react-navigation/native-stack": "^7.1.13",
-    "@outblock/react-native-code-push": "^1.2.3",
     "@tamagui/config": "^1.132.20",
     "buffer": "^6.0.3",
     "immer": "^10.1.1",
@@ -81,7 +80,9 @@
     "lint-staged": "^15.2.10",
     "prettier": "2.8.8",
     "typescript": "5.0.4",
-    "typescript-eslint": "^8.37.0"
+    "typescript-eslint": "^8.37.0",
+    "react-query-external-sync": "^2.2.3",
+    "socket.io-client": "^4.8.1"
   },
   "engines": {
     "node": ">=18"
