--- a/.github/workflows/extension-build.yml
+++ b/.github/workflows/extension-build.yml
@@ -228,10 +228,10 @@ jobs:
       - name: Install Playwright Browsers
         run: pnpm -F frw-extension exec playwright install --with-deps chromium
       - name: Run Playwright tests
-        run: pnpm -F frw-extension test:e2e
+        run: xvfb-run -a --server-args="-screen 0 1280x720x24 -nolisten tcp -nolisten unix" pnpm -F frw-extension test:e2e
         env:
           CI: true
-          HEADLESS: true
+          HEADLESS: false
       - name: Sanitize Playwright Report
         if: always()
         run: cd apps/extension && pnpm tsx build/sanitize-playwright.ts
