--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -35,7 +35,6 @@
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.0.12",
     "@react-navigation/native-stack": "^7.1.13",
-    "@tamagui/config": "^1.132.20",
     "buffer": "^6.0.3",
     "immer": "^10.1.1",
     "instabug-reactnative": "^15.0.1",
@@ -49,8 +48,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.14.1",
     "react-native-svg": "^15.12.1",
-    "react-native-worklets": "^0.4.1",
-    "tamagui": "^1.132.20"
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
