--- a/apps/react-native/package.json
+++ b/apps/react-native/package.json
@@ -38,6 +38,7 @@
     "buffer": "^6.0.3",
     "immer": "^10.1.1",
     "instabug-reactnative": "^15.0.1",
+    "ios": "^0.0.1",
     "lottie-react-native": "^7.3.2",
     "react": "workspace:*",
     "react-i18next": "^15.6.1",
@@ -77,10 +78,10 @@
     "imageoptim-cli": "^3.1.9",
     "lint-staged": "^15.2.10",
     "prettier": "2.8.8",
-    "typescript": "5.0.4",
-    "typescript-eslint": "^8.37.0",
     "react-query-external-sync": "^2.2.3",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "typescript": "5.0.4",
+    "typescript-eslint": "^8.37.0"
   },
   "engines": {
     "node": ">=18"
