--- a/packages/wallet/package.json
+++ b/packages/wallet/package.json
@@ -34,14 +34,13 @@
     "@babel/runtime": "^7.28.2",
     "@onflow/fcl": "^1.12.4",
     "@onflow/frw-context": "workspace:*",
-    "@onflow/frw-types": "workspace:*"
+    "@onflow/frw-types": "workspace:*",
+    "@trustwallet/wallet-core": "^4.0.50"
   },
   "devDependencies": {
     "@types/node": "^20.14.15",
     "tsup": "^8.5.0",
     "vitest": "^3.2.4"
   },
-  "peerDependencies": {
-    "@trustwallet/wallet-core": "^4.0.0"
-  }
+  "peerDependencies": {}
 }
