--- a/packages/wallet/tsconfig.json
+++ b/packages/wallet/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "lib": ["ES2020", "ES2021"]
+    "lib": ["ES2020", "ES2021", "DOM"]
   },
   "include": ["src/**/*"],
   "exclude": ["dist", "node_modules", "**/*.test.*", "**/__tests__/**/*"]
