--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -40,7 +40,6 @@
     "@onflow/transport-http": "^1.13.0",
     "@onflow/util-encode-key": "^1.2.4",
     "elliptic": "^6.5.7",
-    "ethers": "^6.15.0",
     "sha256": "^0.2.0",
     "sha3": "^2.1.4"
   },
@@ -49,6 +48,7 @@
     "add": "^2.0.6",
     "dotenv": "^16.4.5",
     "tsup": "^8.5.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "ethers": "^6.15.0"
   }
 }
